[#483] prevent overlapping with the fixed localgroup component and do not display elements under it

--- a/frontend/app/components/styles/LocalGroup.module.scss
+++ b/frontend/app/components/styles/LocalGroup.module.scss
@@ -5,7 +5,7 @@
 }
 
 .fixed {
-  position: fixed;
+  position: sticky;
   bottom: 0;
   width: 100%;
   overflow-y: scroll;
